--- a/music/templates/_song.html
+++ b/music/templates/_song.html
@@ -1,19 +1,25 @@
-<div class="card shadow-sm w-100 mx-auto">
-    {# refs: https://picsum.photos/ #}
-    <img src="{{ song.cover_url }}" alt="{{ song.name }}" class="cart-img-top" />
+ <input type="hidden" name="song_id" value="{{ song_id }}">
+    <div class="card shadow-sm w-100 mx-auto">
+        {# refs: https://picsum.photos/ #}
+        <img src="{{ song.cover_url }}" alt="{{ song.name }}" class="cart-img-top"/>
 
-    <div class="card-body">
-        <p class="card-text">
-            <div class="text-nowrap overflow-hidden text-truncate">{{ song.artist_name }} | {{ song.name }}</div>
-        </p>
-        <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-                <a href="{{ song.melon_detail_url }}" type="button" class="btn btn-sm btn-outline-danger">Melon</a>
-                <a href="{{ song.youtube_search_url }}" type="button" class="btn btn-sm btn-outline-danger">Youtube</a>
+        <div class="card-body">
+            <p class="card-text">
+                <div class="text-nowrap overflow-hidden text-truncate">{{ song.artist_name }} | {{ song.name }}</div>
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                    {% if user.is_authenticated %}
+                        <a href="{{ song.melon_detail_url }}" type="button" class="btn btn-sm btn-outline-danger">Melon</a>
+                        <a href="{{ song.youtube_search_url }}" type="button" class="btn btn-sm btn-outline-danger">Youtube</a>
+                    {% else %}
+                        <a href="{% url 'accounts:login' %}" type="button" class="btn btn-sm btn-outline-danger">로그인 후 이용해주세요.</a>
+                    {% endif %}
+                </div>
+                <small class="text-body-secondary">
+                    좋아요 ♥ : {{ song.like_count }}
+                </small>
             </div>
-            <small class="text-body-secondary">
-                좋아요 ♥ :  {{ song.like_count }}
-            </small>
         </div>
     </div>
-</div>
+
