--- a/music/templates/root.html
+++ b/music/templates/root.html
@@ -1,8 +1,106 @@
-{% extends "base.html" %}
-{% load component_tags %}
+{% load django_bootstrap5 %}
 
-{% block content %}
-    root.html
+<!doctype html>
+<html lang="ko" data-bs-theme="dark">
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <title>HotTrack</title>
 
-    {# {% component "modal-form" %}{% endcomponent %} #}
-{% endblock %}
+    {# https://cdnjs.com/libraries/bootstrap #}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
+
+</head>
+<body>
+
+{# ref: https://getbootstrap.com/docs/5.3/examples/album/ #}
+
+<header data-bs-theme="dark">
+    <div class="collapse text-bg-dark" id="navbarHeader">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-md-7 py-4">
+                    <h4>About</h4>
+                    <p class="text-body-secondary">Add some information about the album below, the author, or any other
+                        background context. Make it a few sentences long so folks can pick up some informative tidbits.
+                        Then, link them off to some social networking sites or contact information.</p>
+                </div>
+                <div class="col-sm-4 offset-md-1 py-4">
+                    <h4>Contact</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white">Follow on Twitter</a></li>
+                        <li><a href="#" class="text-white">Like on Facebook</a></li>
+                        <li><a href="#" class="text-white">Email me</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <div class="d-flex align-items-center">
+            <a href="{% url 'music:root' %}" class="navbar-brand d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                     viewBox="0 0 24 24">
+                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+                    <circle cx="12" cy="13" r="4"></circle>
+                </svg>
+                <strong>Home</strong>
+            </a>
+            <a href="{% url 'music:index' %}" class="navbar-brand d-flex align-items-center ms-3">
+                <strong>인기차트</strong>
+            </a>
+            </div>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
+                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+</header>
+<main>
+    <section class="py-5 text-center container">
+        <div class="row text-center py-5">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <h2 class="fw-bold">Suno - 당신의 음악을 만들어주는 인공지능 플랫폼</h2>
+                <p class="lead text-body-secondary">
+                    Suno는 인공지능 기술을 활용하여 누구나 쉽게 음악을 만들 수 있도록 돕는 혁신적인 플랫폼입니다.
+                    사용자 친화적인 인터페이스를 통해 원하는 스타일과 장르의 음악을 생성하고, 나만의 음악을 공유하세요!
+                </p>
+
+                <img width="142" height="99"
+                     src="https://suno.com/logos/Logo-1.svg
+" class="block w-full h-full object-contain drop-shadow-logo md:drop-shadow-none" alt="Suno Logo">
+
+                <p class="mt-3">
+                    더 많은 정보를 원하시나요? <a href="https://www.suno.com" target="_blank"
+                                       class="btn btn-sm btn-outline-primary">Suno 공식 웹사이트 방문하기</a>
+                </p>
+            </div>
+        </div>
+
+        <!-- Melon Website Description and Images -->
+        <div class="row text-center py-5">
+            <div class="col-lg-8 col-md-10 mx-auto">
+                <h2 class="fw-bold">멜론(Melon) - 대한민국 최고의 음악 플랫폼</h2>
+                <p class="lead text-body-secondary">
+                    멜론은 대한민국에서 가장 인기 있는 음악 스트리밍 서비스로, 실시간 음악 차트, 고품질 음원, 그리고 아티스트 인터랙션을 제공합니다.
+                    다양한 음악 장르와 최신 트렌드를 한눈에 확인하고, 나만의 플레이리스트를 만들어보세요!
+                </p>
+
+                <img width="142" height="99"
+                     src="https://cdnimg.melon.co.kr/resource/image/web/common/logo_melon142x99.png" alt="Melon">
+
+                <p class="mt-3">
+                    더 많은 정보를 원하시나요? <a href="https://www.melon.com" target="_blank"
+                                       class="btn btn-sm btn-outline-primary">멜론 공식 웹사이트 방문하기</a>
+                </p>
+            </div>
+        </div>
+    </section>
+</main>
