--- a/music/templates/root.html
+++ b/music/templates/root.html
@@ -42,21 +42,24 @@
     <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
             <div class="d-flex align-items-center">
-            <a href="{% url 'music:root' %}" class="navbar-brand d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                     viewBox="0 0 24 24">
-                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-                    <circle cx="12" cy="13" r="4"></circle>
-                </svg>
-                <strong>Home</strong>
-            </a>
-            <a href="{% url 'music:index' %}" class="navbar-brand d-flex align-items-center ms-3">
-                <strong>인기차트</strong>
-            </a>
-           <a href="{% url 'playlist:create_playlist' %}" class="navbar-brand d-flex align-items-center ms-3">
-                <strong>플레이 리스트 생성</strong>
-            </a>
+                <a href="{% url 'music:root' %}" class="navbar-brand d-flex align-items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+                         viewBox="0 0 24 24">
+                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+                        <circle cx="12" cy="13" r="4"></circle>
+                    </svg>
+                    <strong>Home</strong>
+                </a>
+                <a href="{% url 'music:index' %}" class="navbar-brand d-flex align-items-center ms-3">
+                    <strong>인기차트</strong>
+                </a>
+                <a href="{% url 'playlist:create_playlist' %}" class="navbar-brand d-flex align-items-center ms-3">
+                    <strong>플레이 리스트</strong>
+                </a>
+                <a href="#" class="navbar-brand d-flex align-items-center ms-3">
+                    <strong>게시판</strong>
+                </a>
             </div>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
