--- a/music/templates/root.html
+++ b/music/templates/root.html
@@ -55,7 +55,7 @@
                     <strong>인기차트</strong>
                 </a>
                 <a href="{% url 'playlist:create_playlist' %}" class="navbar-brand d-flex align-items-center ms-3">
-                    <strong>플레이 리스트</strong>
+                    <strong>노래 리스트</strong>
                 </a>
                 <a href="#" class="navbar-brand d-flex align-items-center ms-3">
                     <strong>게시판</strong>
