--- a/music/templates/create_playlist.html
+++ b/music/templates/create_playlist.html
@@ -343,6 +343,11 @@
                  <i class="fas fa-trash"></i>
                  <span>삭제</span>
             </span>
+            <span class="btns__btn" onclick="location.href='{% url 'music:upload_song' %}'">
+                 <i class="fas fa-trash"></i>
+                 <span>자작곡 추가하기</span>
+            </span>
+
         </section>
         <!-- 플레이리스트 선택 -->
         <div>
