--- a/music/templates/create_playlist.html
+++ b/music/templates/create_playlist.html
@@ -156,7 +156,7 @@
             const selectedTitle = selectedSongDiv.querySelector('.selected-song__title');
             const selectedArtist = selectedSongDiv.querySelector('.selected-song__artist');
 
-            selectedCover.src = song.cover_url;
+            selectedCover.src = song.cover_url||song.song_file;
             selectedTitle.textContent = song.name;
             selectedArtist.textContent = song.artist_name;
 
@@ -324,7 +324,6 @@
             </div>
         </div>
 
-
         <!-- 버튼 섹션 -->
         <section class="btns">
             <span class="btns__btn" onclick="playSong()">
@@ -383,13 +382,14 @@
         <!-- 노래 리스트 -->
         <ul class="song-list">
             {% for song in songs %}
-                <li class="song-list__song" onclick="showSongInfo({
+                <li class="song-list__song " onclick="showSongInfo({
                         id: '{{ song.id }}',
                         cover_url: '{{ song.cover_url|escapejs }}',
                         name: '{{ song.name|escapejs }}',
-                        artist_name: '{{ song.artist_name|escapejs }}'
+                        artist_name: '{{ song.artist_name|escapejs }}',
+                        song_file: '{% if song.song_file %}{{ song.song_file.url|escapejs }}{% else %}파일이없음{% endif %}',
                         }, this)">
-                      <div class="song-list__cover">
+                    <div class="song-list__cover">
                         {% if song.cover_url %}
                             <img src="{{ song.cover_url }}" alt="{{ song.name }}"
                                  style="width: 100%; height: 100%; object-fit: cover;"/>
@@ -404,10 +404,6 @@
                         <h5>{{ song.name }}</h5>
                         <h6>{{ song.artist_name }}</h6>
                     </div>
-                    <button onclick="removeSongFromPlaylist('{{ playlist_id }}')"
-                            style="background: none; border: none; color: red; cursor: pointer;">
-                        <i class="fas fa-times"></i> <!-- Font Awesome X 아이콘 -->
-                    </button>
                 </li>
             {% endfor %}
         </ul>
