--- a/music/templates/index.html
+++ b/music/templates/index.html
@@ -114,9 +114,9 @@
         <p class="float-end mb-1">
             <a href="#">맽 위로</a>
         </p>
-        <p class="mb-1">Album example is © Bootstrap, but please download and customize it for yourself!</p>
-        <p class="mb-0">New to Bootstrap? <a href="/">Home</a> or read our <a
-                href="/docs/5.3/getting-started/introduction/">getting started guide</a>.</p>
+        <p class="mb-1">© 인가차트 TOP 100  </p>
+        <a>※ 제작사 : Kim Hak Sun ※ 이메일 : haru2175@naver.com </a>
+        <p class="mb-0">메인 화면으로 가시겠어요?  <a href="/">Home</a> <a>
     </div>
 </footer>
 
