--- a/community/templates/base_generic.html
+++ b/community/templates/base_generic.html
@@ -15,7 +15,6 @@
 
 </head>
 <body>
-
 {# ref: https://getbootstrap.com/docs/5.3/examples/album/ #}
 
 <header data-bs-theme="dark">
@@ -86,33 +85,60 @@
     </div>
 </header>
 <body>
-    <div class="container mt-4">
-        <h1>게시물 목록</h1>
+<div class="container mt-4">
+    <h1>게시물 목록</h1>
+    {% if posts %}
+        <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>작성일</th>
+        </tr>
+        </thead>
+    {% endif %}
+    <tbody>
+    {% for post in posts %}
+        <tr>
+            <td>{{ forloop.counter0|add:page_obj.start_index }}</td>
+            <td><a href="{% url 'community:post_detail' post.pk %}">{{ post.title }}</a></td>
+            <td>{{ post.author.username }}</td>
+            <td>{{ post.created_at|date:"Y-m-d" }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
+    </table>
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <a href="{% url 'community:post_create' %}" class="btn btn-success">새 게시물 작성</a>
 
-        {% if posts %}
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>번호</th>
-                        <th>제목</th>
-                        <th>작성자</th>
-                        <th>작성일</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for post in posts %}
-                        <tr>
-                            <td>{{ forloop.counter }}</td>
-                            <td><a href="{% url 'community:post_detail' post.pk %}">{{ post.title }}</a></td>
-                            <td>{{ post.author.username }}</td>
-                            <td>{{ post.created_at|date:"Y-m-d H:i" }}</td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        {% else %}
-            <p class="text-center">게시물이 없습니다.</p>
-        {% endif %}
-        <a href="{% url 'community:post_create' %}" class="btn btn-success mb-3">새 게시물 작성</a>
+        <nav aria-label="Page navigation">
+            <ul class="pagination mb-0">
+                {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1">첫 페이지</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a>
+                    </li>
+                {% endif %}
+
+                {% for num in page_obj.paginator.page_range %}
+                    <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                {% endfor %}
+
+                {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">마지막 페이지</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
+
 </body>
