--- a/music/templates/root.html
+++ b/music/templates/root.html
@@ -31,9 +31,9 @@
                 <div class="col-sm-4 offset-md-1 py-4">
                     <h4>Contact</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                        <li><a href="#" class="text-white">Like on Facebook</a></li>
-                        <li><a href="#" class="text-white">Email me</a></li>
+                        <li><a href="https://x.com/?lang=ko&mx=2" class="text-white">Follow on Twitter</a></li>
+                        <li><a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F%3Flocale%3Dko_KR" class="text-white">Like on Facebook</a></li>
+                        <li><a href="https://www.instagram.com/sem/campaign/emailsignup/?campaign_id=13530338586&extra_1=s%7Cc%7C547419126422%7Ce%7Cinstagram%20%27%7C&placement=&creative=547419126422&keyword=instagram%20%27&partner_id=googlesem&extra_2=campaignid%3D13530338586%26adgroupid%3D126262418054%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-1321618851291%26loc_physical_ms%3D9195932%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gad_source=1&gclid=Cj0KCQjwj4K5BhDYARIsAD1Ly2qwAfwlHoF6OA_pcX_O0bbHepMEmw4eL8TMa5vlLRS-n0BhfVfY1t4aAlmvEALw_wcB" class="text-white">instagram</a></li>
                     </ul>
                 </div>
             </div>
